portfolio and horizontal scroll fix

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,6 @@
   .section {
     padding-top: 94px;
     padding-bottom: 94px;
-    width: 100vw;
   }
 }
 .container {
@@ -41,11 +40,6 @@
   margin: 0 auto;
 }
 
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1200px;
-  }
-}
 * {
   box-sizing: border-box;
   padding: 0;
@@ -56,8 +50,6 @@
 }
 
 body {
-  min-width: 320px;
-  max-width: 1200px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -832,6 +824,76 @@ img {
     padding-right: 10px;
   }
 }
+.product__details-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+.product__details-list .product__details-item {
+  flex-basis: calc(33.3333333333% - 30px);
+  margin-left: 30px;
+  margin-top: 30px;
+  max-width: 370px;
+  border: 1px solid #EEEEEE;
+  cursor: pointer;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.product__details-list .product__details-item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  transform: translate(0);
+}
+.product__details-list .product__details-item:hover .overlay {
+  transform: translate(0);
+}
+
+.product__description {
+  background-color: #FFFFFF;
+  padding: 20px 24px;
+  border: 1px, solid #EEEEEE;
+}
+.product__description .product__details-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: #212121;
+}
+.product__description .product__details-category {
+  font-size: 16px;
+  line-height: 1.875;
+  color: #757575;
+}
+
+.overlay__container {
+  position: relative;
+  overflow: hidden;
+}
+.overlay__container .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2196F3;
+  opacity: 0.9;
+  transform: translatey(100%);
+  transition: transform 250ms ease;
+  padding-top: 63px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+.overlay__container .overlay__text {
+  display: flex;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5555555556;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+}
+
 .footer__section {
   background-color: #2F303A;
 }
