--- a/sass/base/_containers.scss
+++ b/sass/base/_containers.scss
@@ -6,9 +6,3 @@
     margin: 0 auto;
 }
 
-@media screen and (min-width: 1200px) {
-    .container {
-        width: 1200px;
-    }
-}
-
