--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -10,8 +10,6 @@
 }
 
 body {
-    min-width: 320px;
-    max-width: 1200px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
