--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -7,6 +7,5 @@
     .section {
         padding-top: 94px;
         padding-bottom: 94px;
-        width: 100vw;
     }
 }
