--- a/sass/layouts/_portfolio-products.scss
+++ b/sass/layouts/_portfolio-products.scss
@@ -1,90 +1,84 @@
-@use '../utilities/variables.scss';
+@use '../utilities/variables';
 
 // PORTFOLIO PRODUCTS
+.product__details-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * 30px);
+    margin-left: calc(-1 * 30px);
 
 
+    .product__details-item {
+        flex-basis: calc(100% / 3 - 30px);
+        margin-left: 30px;
+        margin-top: 30px;
+        max-width: 370px;
+        border: 1px solid #EEEEEE;
+        cursor: pointer;
+        transition: box-shadow variables.$transition-time variables.$transition-time-function,
+            transform variables.$transition-time variables.$transition-time-function;
 
+        &:hover {
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+                0px 4px 4px rgba(0, 0, 0, 0.06),
+                1px 4px 6px rgba(0, 0, 0, 0.16);
+            transform: translate(0);
+        }
 
+        &:hover .overlay {
+            transform: translate(0);
+        }
+    }
+}
 
+.product__description {
+    background-color: variables.$background-white-color;
+    padding: 20px 24px;
+    border: 1px, solid #EEEEEE;
 
+    .product__details-title {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: calc(36/18);
+        letter-spacing: 0.06em;
+        color: variables.$dark-text-color;
+    }
 
-// z.product__details-list {
-//     display: flex;
-//     flex-wrap: wrap;
-//     margin-top: calc(-1 * 30px);
-//     margin-left: calc(-1 * 30px);
-// }
+    .product__details-category {
+        font-size: 16px;
+        line-height: calc(30/16);
+        color: variables.$medium-text-color;
+    }
+}
 
-// .product__details-item {
-//     flex-basis: calc(100% / 3 - 30px);
-//     margin-left: 30px;
-//     margin-top: 30px;
-//     max-width: 370px;
-//     border: 1px solid #EEEEEE;
-//     cursor: pointer;
-//     transition: box-shadow variables.$transition-time variables.$transition-time-function,
-//         transform variables.$transition-time variables.$transition-time-function;
+// PORTFOLIO PRODUCTS DECORATIVE OVERLAY
+.overlay__container {
+    position: relative;
+    overflow: hidden;
 
-//     &:hover {
-//         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-//             0px 4px 4px rgba(0, 0, 0, 0.06),
-//             1px 4px 6px rgba(0, 0, 0, 0.16);
-//         transform: translate(0);
-//     }
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: variables.$accent-color;
+        opacity: 0.9;
+        transform: translatey(100%);
+        transition: transform 250ms ease;
+        padding-top: 63px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
 
-//     &:hover .overlay {
-//         transform: translate(0);
-//     }
-// }
-
-// .product__description {
-//     background-color: variables.$background-white-color;
-//     padding: 20px 24px;
-//     border: 1px, solid #EEEEEE;
-
-//     .product__details-title {
-//         font-weight: 700;
-//         font-size: 18px;
-//         line-height: calc(36/18);
-//         letter-spacing: 0.06em;
-//         color: variables.$dark-text-color;
-//     }
-
-//     .product__details-category {
-//         font-size: 16px;
-//         line-height: calc(30/16);
-//         color: variables.$medium-text-color;
-//     }
-// }
-
-// // PORTFOLIO PRODUCTS DECORATIVE OVERLAY
-// .overlay__container {
-//     position: relative;
-//     overflow: hidden;
-
-//     .overlay {
-//         position: absolute;
-//         top: 0;
-//         left: 0;
-//         width: 100%;
-//         height: 100%;
-//         background-color: variables.$accent-color;
-//         opacity: 0.9;
-//         transform: translatey(100%);
-//         transition: transform 250ms ease;
-//         padding-top: 63px;
-//         padding-left: 24px;
-//         padding-right: 24px;
-//     }
-
-//     .overlay__text {
-//         display: flex;
-//         font-family: 'Roboto';
-//         font-style: normal;
-//         font-weight: 400;
-//         font-size: 18px;
-//         line-height: calc(28/18);
-//         letter-spacing: 0.03em;
-//         color: variables.$white-text-color;
-//     }
-// }
+    .overlay__text {
+        display: flex;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: calc(28/18);
+        letter-spacing: 0.03em;
+        color: variables.$white-text-color;
+    }
+}
